js/js.translator/testData/incremental/invalidation/fileNameClashPerModule/lib/f1.kt
package foo

fun test1() = "OK"